np_one_namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}  # Applies to all pods in this namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}  # Allows traffic from any pod in the same namespace
